syntax="proto3";

option go_package= "./proto";

package greet_service;

// defining the rpc calls for a particular service 

service GreetService{
    rpc SayHello(NoParam) returns (HelloResponse);

    rpc SayHelloServerSideStreaming(NameList)  returns (stream HelloResponse);

    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessageList);

    rpc SayHelloBidirecctionalStreaming(stream HelloRequest) returns (stream HelloResponse);
}


message NoParam {};

message HelloResponse {
    string message =1;
}

message HelloRequest {
    string name =1;
}

message NameList {
    repeated string names = 1;
}

message MessageList{
    repeated string messages=1;
}
